# advanced-library-management-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
api/library_management/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py
api/library_management/migrations/: 0002_remove_author_bio_remove_category_description.py  0003_book_available_copies.py
api/records/: apps.py  serializers.py  services.py  tasks.py  views.py
api/records/migrations/: 0001_initial.py
api/users/: models.py  views.py
api/users/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
library_management/: filters.py  models.py  serializers.py  urls.py  views.py
library_management/migrations/: 0001_initial.py  0002_remove_library_book_category.py  0003_library_location.py  0004_alter_book_author_alter_book_category_and_more.py
nginx/: nginx.conf
records/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
records/commands/: periodic.py
records/migrations/: 0001_initial.py  0002_alter_borrowingrecord_due_date.py
users/: models.py  serializers.py
